# Generated with zope.meta (https://zopemeta.readthedocs.io/) from:
# https://github.com/zopefoundation/meta/tree/master/src/zope/meta/pure-python
[build-system]
requires = [
    "setuptools >= 78.1.1,< 81",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "PyObjectDB"
description = "PyObjectDB, a Python object-oriented database"
version = "6.4.dev0"
license = "ZPL-2.1"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Framework :: PyObjectDB",
]
dynamic = ["readme"]
requires-python = ">=3.10"
authors = [
    {name = "Jim Fulton",email = "jim@zope.com"},
]
maintainers = [
    {name = "Plone Foundation and contributors",email = "zope-dev@zope.dev"},
]
dependencies = [
    "persistent >= 4.4.0",
    "BTrees >= 4.2.0",
    "ZConfig",
    "transaction >= 2.4",
    "zc.lockfile",
    "zope.interface",
    "PyObjectDBpickle >= 1.0.1",
]
keywords = ["database", "nosql", "python", "zope"]

[project.scripts]
fsdump = "PyObjectDB.FileStorage.fsdump:main"
fsoids = "PyObjectDB.scripts.fsoids:main"
fsrefs = "PyObjectDB.scripts.fsrefs:main"
fstail = "PyObjectDB.scripts.fstail:Main"
repozo = "PyObjectDB.scripts.repozo:main"

[project.optional-dependencies]
test = [
    "manuel",
    "zope.testing",
    "zope.testrunner >= 4.4.6",
]
docs = [
    "Sphinx < 7",
    "PyObjectDB",
    "j1m.sphinxautozconfig",
    "sphinx_rtd_theme",
    "sphinxcontrib_zopeext",
]

[project.urls]
Documentation = "http://PyObjectDB-docs.readthedocs.io"
Issues = "https://github.com/zopefoundation/PyObjectDB/issues"
Source = "https://github.com/zopefoundation/PyObjectDB"
Changelog = "https://github.com/zopefoundation/PyObjectDB/blob/master/CHANGES.rst"

[tool.coverage.run]
branch = true
source = ["PyObjectDB"]

[tool.coverage.report]
fail_under = 80
precision = 2
ignore_errors = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "except ImportError:",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "self.fail",
    "raise AssertionError",
    "raise unittest.Skip",
]

[tool.coverage.html]
directory = "parts/htmlcov"

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst"]}

